--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,13 +1,10 @@
-$text-black: #000000;
-
 .features {
-  .features__title {
+  &__title {
     width: 185px;
     height: 24px;
     color: $text-black;
-    font-family: @font-face;
     font-size: 25px;
     font-weight: 700;
-    line-height: 30px;
+    line-height: 1.2;
   }
 }
