--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,4 +19,7 @@
 @import "blocks/reviews.scss";
 @import "blocks/slider.scss";
 @import "blocks/social.scss";
-@import "blocks/fonts";
+@import "variables.scss";
+@import "fonts.scss";
+@import "mixins.scss";
+@import "scaffolding.scss";
