--- a/source/sass/blocks/catalog-item.scss
+++ b/source/sass/blocks/catalog-item.scss
@@ -1,55 +1,47 @@
-
-$white: #ffffff;
-$text-black: #000000;
-$dark-gray: #444444;
-
 .catalog-item {
 
   background-color: $white;
 
-  .catalog-item__img {
+  &__img {
     width: 260px;
     height: 195px;
   }
 
-  .catalog-item__features {
+  &__features {
     width: 260px;
     height: 179px;
     border: 1px solid $light-gray;
     background-color: $white;
   }
 
-  .catalog-item__title-name {
+  &__title-name {
     width: 197px;
     height: 18px;
     color: $text-black;
-    font-family: @font-face;
     font-size: 17px;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 1.41;
   }
 
-  .catalog-item__title-description {
+  &__title-description {
     width: 127px;
     height: 12px;
     color: $dark-gray;
-    font-family: @font-face;
     font-size: 13px;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 2.31;
   }
 
-  .catalog-item-price-rub {
+  &__price-rub {
     width: 74px;
     height: 16px;
     color: $text-black;
-    font-family: @font-face;
     font-size: 15px;
     font-weight: 700;
-    line-height: 24px;
+    line-height: 1.6;
   }
 
-  .catalog-item__price-icon {
+  &__price-icon {
     width: 20px;
     height: 19px;
     opacity: 0.2;
