--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,46 +1,39 @@
-$text-black: #000000;
-$dark-gray: #444444;
-$white: #ffffff;
-
 .contacts {
-  .contacts__title {
+  &__title {
     width: 91px;
     height: 14px;
     color: $text-black;
-    font-family: @font-face;
     font-size: 18px;
     font-weight: 700;
-    line-height: 30px;
+    line-height: 1.67;
   }
 
-  .contacts__details {
+  &__details {
     color: $dark-gray;
-    font-family: @font-face;
     font-size: 15px;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 2;
   }
 
-  .contacts__details-key {
+  &__details-key {
     width: 46px;
     height: 76px;
   }
 
-  .contacts__details-value {
+  &__details-value {
     width: 178px;
     height: 166px;
   }
 
-  .contacts__button {
+  &__button {
     width: 260px;
     height: 52px;
     border: 2px solid $dark-gray;
     background-color: $white;
     color: $dark-gray;
-    font-family: @font-face;
     font-size: 18px;
     font-weight: 700;
-    line-height: 20px;
+    line-height: 1.11;
     text-transform: uppercase;
   }
 }
