--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,38 +1,31 @@
-$white: #ffffff;
-$light-gray: #ececec;
-$text-black: #000000;
-$dark-gray: #444444;
-
 .promo {
   width: 260px;
   height: 503px;
   border: 1px solid $light-gray;
   background-color: $white;
 
-  .promo__title {
+  &__title {
     width: 126px;
     height: 41px;
     color: $text-black;
-    font-family: @font-face;
     font-size: 17px;
     font-weight: 700;
-    line-height: 24px;
-    background-image: url("img/img/icon-video.svg");
+    line-height: 1.41;
+    background-image: url("/css/img/icon-video.svg");
     background-repeat: no-repeat;
   }
 
-  .promo__video {
+  &__video {
     width: 260px;
     height: 150px;
   }
 
-  .promo__text {
+  &__text {
     width: 183px;
     height: 109px;
     color: $dark-gray;
-    font-family: @font-face;
     font-size: 13px;
     font-weight: 400;
-    line-height: 24px;
+    line-height: 1.85;
   }
 }
