--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -1,36 +1,30 @@
-$dark-gray: #444444;
-$text-black: #000000;
-
 .review {
-  .review__text {
+  &__text {
     width: 255px;
     height: 252px;
     color: $dark-gray;
-    font-family: @font-face;
+
     font-size: 15px;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 2;
   }
 
-  .review__author {
+  &__author {
     width: 241px;
     height: 45px;
     color: $text-black;
-    font-family: @font-face;
     font-size: 17px;
     font-weight: 700;
   }
 
-  .review__author-name {
-    font-family: @font-face;
+  &__author-name {
     font-weight: 700;
-    line-height: 24px;
+    line-height: 1.41;
   }
 
-  .review__author-nickname {
+  &__author-nickname {
     color: $dark-gray;
-    font-family: @font-face;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 1.76;
   }
 }
