--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,3 +1,15 @@
 .catalog {
   background-color: $white;
 }
+
+@media (min-width: $tablet-width) {
+  .catalog {
+    background-color: $white;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog {
+    background-color: $white;
+  }
+}
