--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -127,3 +127,299 @@
     text-transform: uppercase;
   }
 }
+
+@media (min-width: $tablet-width) {
+  .form {
+    &__intro {
+      width: 612px;
+      height: 47px;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.76;
+    }
+
+    &__legend {
+      width: 36px;
+      height: 12px;
+      color: $mint;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 0.94;
+      text-transform: uppercase;
+    }
+
+    &__radio-button {
+      width: 54px;
+      height: 55px;
+      border: 2px solid $dark-gray;
+      background-color: $white;
+    }
+
+    &__radio-label {
+      height: 19px;
+      color: $text-black;
+      font-size: 19px;
+      font-weight: 700;
+      line-height: 0.95;
+    }
+
+    &__personal {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &__personal-label {
+      height: 15px;
+      color: $text-black;
+      font-size: 19px;
+      font-weight: 700;
+      line-height: 0.95;
+    }
+
+    &__personal-name {
+      height: 52px;
+      box-shadow: inset 0 -2px 0 $text-black;
+
+      &::placeholder {
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__contact-wrapper {
+      width: 768px;
+      height: 228px;
+      background-color: $gray;
+    }
+
+    &__input-tel {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 501px;
+      height: 52px;
+      box-shadow: inset 0 -2px 0 $text-black;
+
+      &::placeholder {
+        width: 123px;
+        height: 15px;
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__input-email {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 501px;
+      height: 52px;
+      box-shadow: inset 0 -2px 0 $text-black;
+
+      &::placeholder {
+        width: 101px;
+        height: 16px;
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__additional-textarea {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 501px;
+      height: 142px;
+      box-shadow: inset 0 -2px 0 $text-black;
+      border: 2px solid $dark-gray;
+      background-color: $white;
+
+      &::placeholder {
+        width: 365px;
+        height: 19px;
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__text-note {
+      width: 299px;
+      height: 17px;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.76;
+    }
+
+    &__submit-button {
+      width: 230px;
+      height: 52px;
+      border: 2px solid $dark-gray;
+      background-color: $white;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 0.94;
+      text-transform: uppercase;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form {
+    &__intro {
+      width: 672px;
+      height: 47px;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.76;
+    }
+
+    &__legend {
+      width: 35px;
+      height: 12px;
+      color: $mint;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 0.94;
+      text-transform: uppercase;
+    }
+
+    &__radio-button {
+      width: 54px;
+      height: 55px;
+      border: 2px solid $dark-gray;
+      background-color: $white;
+    }
+
+    &__radio-label {
+      height: 19px;
+      color: $text-black;
+      font-size: 19px;
+      font-weight: 700;
+      line-height: 0.95;
+    }
+
+    &__personal-label {
+      height: 15px;
+      color: $text-black;
+      font-size: 19px;
+      font-weight: 700;
+      line-height: 0.95;
+    }
+
+    &__personal-name {
+      height: 52px;
+      box-shadow: inset 0 -2px 0 $text-black;
+
+      &::placeholder {
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__contact-wrapper {
+      width: 768px;
+      height: 228px;
+      background-color: $gray;
+    }
+
+    &__input-tel {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 700px;
+      height: 52px;
+      box-shadow: inset 0 -2px 0 $text-black;
+
+      &::placeholder {
+        width: 123px;
+        height: 15px;
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__input-email {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 700px;
+      height: 52px;
+      box-shadow: inset 0 -2px 0 $text-black;
+
+      &::placeholder {
+        width: 101px;
+        height: 16px;
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__additional-textarea {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 700px;
+      height: 142px;
+      box-shadow: inset 0 -2px 0 $text-black;
+      border: 2px solid $dark-gray;
+      background-color: $white;
+
+      &::placeholder {
+        width: 365px;
+        height: 19px;
+        opacity: 0.3;
+        color: $dark-gray;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 0.95;
+      }
+    }
+
+    &__text-note {
+      width: 300px;
+      height: 17px;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.76;
+    }
+
+    &__submit-button {
+      width: 230px;
+      height: 52px;
+      border: 2px solid $dark-gray;
+      background-color: $white;
+      color: $dark-gray;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 0.94;
+      text-transform: uppercase;
+    }
+  }
+}
