--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -3,3 +3,19 @@ $footer-bgcolor: #f1f1f1;
 .page-footer {
   background-color: $footer-bgcolor;
 }
+
+@media (min-width: $tablet-width) {
+  .page-footer {
+    display: flex;
+    justify-content: center;
+    width: 768px;
+    min-height: 143px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-footer {
+    width: 1250px;
+    min-height: 143px;
+  }
+}
