--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -18,3 +18,35 @@
     }
   }
 }
+
+@media (min-width: $tablet-width) {
+  .slider {
+    &__arrow {
+      &--previous {
+        width: 50px;
+        height: 26px;
+      }
+
+      &--next {
+        width: 50px;
+        height: 26px;
+      }
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .slider {
+    &__arrow {
+      &--previous {
+        width: 50px;
+        height: 26px;
+      }
+
+      &--next {
+        width: 50px;
+        height: 26px;
+      }
+    }
+  }
+}
