--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "Open Sans";
   src: local("Open Sans Regular"),
-    url("/source/css/fonts/fonts/opensans.woff") format(".woff"),
-    url("/source/css/fonts/fonts/opensans.woff2") format(".woff2");
+    url("/source/css/fonts/fonts/opensans.woff") format(".woff2"),
+    url("/source/css/fonts/fonts/opensans.woff2") format(".woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -10,8 +10,8 @@
 @font-face {
   font-family: "Opens Sans";
   src: local("Open Sans Bold"),
-    url("/source/css/fonts/fonts/opensansbold.woff") format(".woff"),
-    url("/source/css/fonts/fonts/opensansbold.woff2") format(".woff2");
+    url("/source/css/fonts/fonts/opensansbold.woff") format(".woff2"),
+    url("/source/css/fonts/fonts/opensansbold.woff2") format(".woff");
   font-weight: 700;
   font-style: normal;
 }
