--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,5 +1,8 @@
 body {
   min-width: 320px;
+  margin: 0;
+  padding: 0;
   background-color: $white;
   font-family: "Open Sans", "Arial", sans-serif;
 }
+
